--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,8 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
 # Mod Properties
-mod_version=1.1.0
+mod_version=1.1.0-alpha.3
+
 maven_group=dev.krysztal
 archives_base_name=AdvancedAgriculture
 
