--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ loom {
             name "Data Generation"
             vmArg "-Dfabric-api.datagen"
             vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
-            vmArg "-Dfabric-api.datagen.strict-validation"
+//            vmArg "-Dfabric-api.datagen.strict-validation"
 
             runDir "build/datagen"
         }
