⚙ Dep: Add ClothConfig

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,9 @@ loader_version=0.14.10
 
 #Fabric api
 fabric_version=0.64.0+1.19.2
+
+# Lombok
+lombok_version=1.18.24
+
+# Cloth config
+cloth_config_version=8.2.88
