--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: [17]
+        java: [17, 18, 19]
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     steps:
@@ -20,9 +20,8 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
 
-      - name: Make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
+      - name: Init
+        run: ./gradlew init
 
       - name: Build
         run: ./gradlew build
