--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: [17, 18, 19]
+        java: [17, 18]
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     steps:
