--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
 # Mod Properties
-mod_version=1.2.0-alpha.1
+version=1.2.0-alpha.1
 
 maven_group=dev.krysztal
 archives_base_name=AdvancedAgriculture
@@ -15,7 +15,7 @@ minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.28
 loader_version=0.14.10
 
-#Fabric api
+# Fabric api
 fabric_version=0.64.0+1.19.2
 
 # Lombok
