--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
     // for more information about repositories.
     maven { url "https://maven.shedaniel.me/" }
     maven { url "https://maven.terraformersmc.com/releases/" }
+    maven { url = "https://mvn.devos.one/snapshots/" }
 }
 
 dependencies {
@@ -44,6 +45,9 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+
+    // Registrate for fabric
+    modImplementation "com.tterrag.registrate_fabric:Registrate:${project.registrate_version}"
 }
 
 processResources {
