--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,6 @@ lombok_version=1.18.24
 
 # Cloth config
 cloth_config_version=8.2.88
+
+# Registrate for fabric
+registrate_version=1.1.47-MC1.19.2
