Enable ScalaDoc's author tag

--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,12 @@ tasks.withType(ScalaCompile) {
 	]
 }
 
+tasks.withType(ScalaDoc) {
+	scalaDocOptions.additionalParameters = [
+		"-author"
+	]
+}
+
 java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
